# metadata_extractors_api

./: .gitignore  .pre-commit-config.yaml  README.md  index.html  pyproject.toml  scratch.py  versions.js
.github/workflows/: build-docs.yml  ci.yml  deploy-pages.yml
beam/: __init__.py
docs/source/: conf.py  index.rst
docs/source/_static/: custom_theme.css
main/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
main/.doctrees/: environment.pickle  index.doctree
main/.doctrees/apidoc/: marda_extractors_api.doctree  modules.doctree
main/_sources/: index.rst.txt
main/_sources/apidoc/: marda_extractors_api.rst.txt  modules.rst.txt
main/apidoc/: marda_extractors_api.html  modules.html
marda_extractors_api/: __init__.py
scripts/: biologic-mpr-example.py
tests/: test_mpr.py
